# wattsup

./: .gitignore  Makefile  README.md
.github/workflows/: ci-cd.yml
cloud-infra/: cdk.json  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
cloud-infra/lib/: index.ts  infrastructure-stack.ts  pipeline-stack.ts
cloud-infra/test/: infrastructure-stack.test.ts  pipeline-stack.test.ts
wattsup-app/: pyproject.toml  pytest.ini  requirements-dev.txt
wattsup-app/authorizer_lambda/: app.py
wattsup-app/lambda_a/: app.py
wattsup-app/lambda_b/: app.py
wattsup-app/post_lambda/: app.py
wattsup-app/tests/: conftest.py  test_authorizer.py  test_lambda_a.py  test_lambda_b.py  test_post_lambda.py
